success unit test of user-voice wiht front and ai-server
