# src/routers/api/s3/perfectVoiceRouter.js
@@ -1,7 +1,7 @@
 import express from 'express';
 import {
-  getPVoice,
-  getPVoices
+  getPerfectVoice,
+  getPerfectVoices
 } from '../../../controllers/api/s3/perfectVoiceController';
 import { middleAuth } from '../../../middlewares';
 
@@ -9,10 +9,10 @@ const perfectVoiceRouter = express.Router();
 
 // get the perfect voices list
 // api.k-peach.io/perfect-voice
-perfectVoiceRouter.get('/', middleAuth, getPVoices);
+perfectVoiceRouter.get('/', middleAuth, getPerfectVoices);
 
 // get a perfect voice
 // api.k-peach.io/perfect-voice/{name}
-perfectVoiceRouter.get('/:name', middleAuth, getPVoice);
+perfectVoiceRouter.get('/:name', middleAuth, getPerfectVoice);
 
 export default perfectVoiceRouter;
