# src/server.js
@@ -1,3 +1,17 @@
+/*
+- PrgName : server.js at peach-api  
+- Date : 2021. 07. 18 
+- Creator : 정성진 ( tjdwls0607@naver.com )
+- Version : v0.1.0 
+- Description : peach API back-end server 
+- Usage 
+1) startup : sudo npm run dev:server
+2) build : sudo npm run build:server
+3) pm2 for dev : sudo npm run pm2:dev
+4) pm2 for product : sudo npm run pm2:prod
+5) stop : ^c (or sudo pm2 stop all)
+6) api-docs : sudo npm run api:docs
+*/
 import helmet from 'helmet';
 import express from 'express';
 import morgan from 'morgan';
@@ -23,10 +37,10 @@ app.use(cors());
 
 app.use('/api-docs', swaggerUi.serve, swaggerUi.setup(swaggerSpec));
 app.use('/', rootRouter);
-app.use('/thumbnail', thumbnailRouter);
-app.use('/perfect-voice', perfectVoiceRouter);
-app.use('/user-voice', userVoiceRouter);
-app.use('/auth/admin', adminRouter);
+app.use('/api/s3/thumbnail', thumbnailRouter);
+app.use('/api/s3/perfect-voice', perfectVoiceRouter);
+app.use('/api/s3/user-voice', userVoiceRouter);
+app.use('/api/auth/admin', adminRouter);
 
 app.listen(80, () =>
   // eslint-disable-next-line no-console
